--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
         <script type="text/javascript" src="app.js"></script>
         <script type="text/javascript" src="/controllers/AdminUserCtrl.js"></script>
-        <script type="text/javascript" src="/service/AppServices.js"></script>
+        <!-- <script type="text/javascript" src="/service/AppServices.js"></script> -->
 
     </head>
 
@@ -38,7 +38,8 @@
 
                     <div style="padding-top:30px" class="panel-body" >
                         <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
-                        <form id="loginform" class="form-horizontal" role="form" ng-controller="AdminUserCtrl">
+                        <!-- <form id="loginform" class="form-horizontal" role="form" ng-controller="AdminUserCtrl"> -->
+                        <form id="loginform" class="form-horizontal" role="form" >
                         <div ng-show="login.error"><h1>{{ login.errormessage }}</h1></div>
                             <div style="margin-bottom: 25px" class="input-group">
                                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
