ng-route plugged in

--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,13 @@
 
 
         <script type="text/javascript" src="/release/jquery.min.js"></script>
-        <script type="text/javascript" src="/release/angular.min.js"></script>
+        <script type="text/javascript" src="/release/angular.js"></script>
         <!-- <script type="text/javascript" src='/release/angular-ui-router.min.js'></script> -->
-        <!-- <script src="/release/angular-route.min.js"></script> -->
+        <script src="/release/angular-route.js"></script>
 
         <script type="text/javascript" src="app.js"></script>
         <script type="text/javascript" src="/controllers/AdminUserCtrl.js"></script>
-        <!-- <script type="text/javascript" src="/service/AppServices.js"></script> -->
+        <script type="text/javascript" src="/service/AppServices.js"></script>
 
     </head>
 
