--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 
                     <div style="padding-top:30px" class="panel-body" >
                         <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
-                        <!-- <form id="loginform" class="form-horizontal" role="form" ng-controller="AdminUserCtrl"> -->
+                        <form id="loginform" class="form-horizontal" role="form" ng-controller="AdminUserCtrl">
                         <form id="loginform" class="form-horizontal" role="form" >
                         <div ng-show="login.error"><h1>{{ login.errormessage }}</h1></div>
                             <div style="margin-bottom: 25px" class="input-group">
