--- a/public/index.html
+++ b/public/index.html
@@ -29,134 +29,69 @@
 
     <body>
         <div class="container">
-            <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-                <div class="panel panel-info" >
-                    <div class="panel-heading">
-                        <div class="panel-title">Sign In</div>
-                        <div style="float:right; font-size: 80%; position: relative; top:-10px"><a href="#">Forgot password?</a></div>
-                    </div>
+            <div class="row-fluid" style="padding-top: 25px;">
+                <div class="mainbox col-md-6 col-md-offset-3 " >
+                    <div class="panel panel-info " >
+                        <div class="panel-heading text-center" >
+                            <div class="panel-title"><i class="fa fa-user fa-5x"></i></div>
 
-                    <div style="padding-top:30px" class="panel-body" >
-                        <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
-                        <form id="loginform" class="form-horizontal" role="form" ng-controller="AdminUserCtrl">
-                        <form id="loginform" class="form-horizontal" role="form" >
-                        <div ng-show="login.error"><h1>{{ login.errormessage }}</h1></div>
-                            <div style="margin-bottom: 25px" class="input-group">
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                                <input id="login-email" type="text" class="form-control" name="email" value="" placeholder="username or email" ng-model="login.email">
-                            </div>
+                        </div>
+                        <div style="padding-top:30px" class="panel-body" >
+                            <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+                            <!--
+                            The login form
+                            -->
+                            <form id="loginform" name="loginform" class="form-horizontal" role="form"  ng-submit="submitForm(loginform.$valid)" ng-controller="AdminUserCtrl" novalidate>
 
-                            <div style="margin-bottom: 25px" class="input-group">
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                                <input id="login-password" type="password" class="form-control" name="password" placeholder="password" ng-model="login.password">
-                            </div>
-
-
-
-                            <div class="input-group">
-                                <div class="checkbox">
-                                    <label>
-                                        <input id="login-remember" type="checkbox" name="remember" value="1"> Remember me
-                                    </label>
+                                <div class="alert alert-danger col-sm-8 col-sm-offset-2" role="alert" ng-show="login.error">
+                                    <h5>{{ login.errormessage }}</h5>
                                 </div>
-                            </div>
 
 
-                            <div style="margin-top:10px" class="form-group">
-                                <div class="col-sm-12 controls">
-                                    <a id="btn-login" href="#" class="btn btn-success" ng-click="logIn(login.email, login.password)">Login  </a>
-                                    <!-- <a id="btn-fblogin" href="#" class="btn btn-primary">Login with Facebook</a> -->
-
+                                <div style="margin-bottom: 25px" class="input-group col-sm-8 col-sm-offset-2" ng-class="{'has-error': loginform.email.$invalid }">
+                                    <span class="input-group-addon">
+                                    <i class="glyphicon glyphicon-user"></i>
+                                    </span>
+                                    <input id="login-email" type="email" class="form-control" name="email" placeholder="username or email" ng-model="login.email" required/>
                                 </div>
-                            </div>
-                            <!-- <div class="form-group">
-                                <div class="col-md-12 control">
-                                    <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%" >
-                                        Don't have an account!
-                                        <a href="#" onClick="$('#loginbox').hide(); $('#signupbox').show()">
-                                        Sign Up Here
-                                        </a>
+
+                                <div style="margin-bottom: 25px" class="input-group col-sm-8 col-sm-offset-2" ng-class="{'has-error': loginform.password.$invalid }">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                                    <input id="login-password" type="password" class="form-control" name="password" placeholder="password" ng-model="login.password" required>
+                                </div>
+
+                                <div style="margin-bottom: 25px" class="input-group col-sm-8 col-xs-8 col-sm-offset-2 col-xs-offset-2" >
+                                    <div class="col-sm-8">
+                                        <p ng-show="loginform.email.$invalid && !loginform.email.$pristine" class="help-block">Username is an email address.</p>
+                                    </div>
+
+                                    <div class="col-sm-4" style="text-align: right; padding-right: 0;">
+                                        <button type="submit"  class="btn btn-primary"  ng-disabled="loginform.$invalid">Login</button>
                                     </div>
                                 </div>
-                            </div> -->
-                        </form>
+                            </form>
+
+                        </div>
+                        <div class="panel-footer" style="height: 50px;">
+                            <div class="col-md-6 col-xs-6" >
+                                <a id="btn-forget" href="#" class="btn btn-link" style="width:100%"><i class="fa fa-lock fa-fw "> </i> Forgot Password?</a>
+                            </div>
+                            <div class="col-md-6 col-xs-6"  >
+                                <a id="btn-forget" href="#" class="btn btn-link" style="width: 100%"><i class="fa fa-user fa-fw  text-center"></i> Sign Up</a>
+                            </div>
 
 
+                            <!-- <div class="col-md-1 col-md-offset-2 " style="border:1px solid black;"> -->
+                            <!-- -->
+                            <!-- </div> -->
+                            <!-- <div class="col-md-4">&nbsp;</div> -->
+                            <!-- <div class="col-md-4" style="border:1px solid black;"> -->
+                            <!--  -->
+                            <!-- </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
-
-            <!-- <div id="signupbox" style="display:none; margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-                <div class="panel panel-info">
-                    <div class="panel-heading">
-                        <div class="panel-title">Sign Up</div>
-                        <div style="float:right; font-size: 85%; position: relative; top:-10px"><a id="signinlink" href="#" onclick="$('#signupbox').hide(); $('#loginbox').show()">Sign In</a></div>
-                    </div>
-                    <div class="panel-body" >
-                        <form id="signupform" class="form-horizontal" role="form">
-
-                            <div id="signupalert" style="display:none" class="alert alert-danger">
-                                <p>Error:</p>
-                                <span></span>
-                            </div>
-
-
-
-                            <div class="form-group">
-                                <label for="email" class="col-md-3 control-label">Email</label>
-                                <div class="col-md-9">
-                                    <input type="text" class="form-control" name="email" placeholder="Email Address">
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="firstname" class="col-md-3 control-label">First Name</label>
-                                <div class="col-md-9">
-                                    <input type="text" class="form-control" name="firstname" placeholder="First Name">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="lastname" class="col-md-3 control-label">Last Name</label>
-                                <div class="col-md-9">
-                                    <input type="text" class="form-control" name="lastname" placeholder="Last Name">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="password" class="col-md-3 control-label">Password</label>
-                                <div class="col-md-9">
-                                    <input type="password" class="form-control" name="passwd" placeholder="Password">
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="icode" class="col-md-3 control-label">Invitation Code</label>
-                                <div class="col-md-9">
-                                    <input type="text" class="form-control" name="icode" placeholder="">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-md-offset-3 col-md-9">
-                                    <button id="btn-signup" type="button" class="btn btn-info"><i class="icon-hand-right"></i> &nbsp Sign Up</button>
-                                    <span style="margin-left:8px;">or</span>
-                                </div>
-                            </div>
-
-                            <div style="border-top: 1px solid #999; padding-top:20px"  class="form-group">
-                                <div class="col-md-offset-3 col-md-9">
-                                    <button id="btn-fbsignup" type="button" class="btn btn-primary"><i class="icon-facebook"></i>   Sign Up with Facebook</button>
-                                </div>
-
-                            </div>
-
-
-
-                        </form>
-                    </div>
-                </div>
-
-
-
-            </div> -->
         </div>
     </body>
 </html>
