--- a/public/tesing.html
+++ b/public/tesing.html
@@ -21,18 +21,35 @@
     </head>
     <body>
 
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 
+               <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Northbrook Exchange</a>
+                </div>
 
-        <div class="panel panel-default">
-            <div class="panel-body">
-                Panel content
-            </div>
-            <div class="panel-footer" style="height:25px">
-                <div class="col-md-6" style="border:1px solid blue;">
-                    <a id="btn-forget" href="#" class="btn btn-default" style="width:100%"><i class="fa fa-lock fa-fw"> Forgot Password?</i></a>
+                <div class="navbar-collapse collapse">
+                   <!--  <form class="navbar-form navbar-right" role="form">
+                        <div class="form-group">
+                            <input type="text" placeholder="Email" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="password" placeholder="Password" class="form-control">
+                        </div>
+                        <button type="submit" class="btn btn-success">Sign in</button>
+                    </form> -->
+                    </div><!--/.navbar-collapse -->
                 </div>
             </div>
-        </div>
+
+
+        
     </body>
 </head>
 </html>
