--- a/public/tesing.html
+++ b/public/tesing.html
@@ -14,6 +14,7 @@
 
         <!-- Custom Fonts -->
         <link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href="/css/nabler.css" rel="stylesheet" type="text/css">
 
 
         <script type="text/javascript" src="/release/jquery.min.js"></script>
