--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
         <link rel="stylesheet" type="text/css" href="/css/style.css" />
         <link rel="stylesheet" type="text/css" href="/css/nabler.css" />
+        <link rel="stylesheet" type="text/css" href="/css/trNgGrid.min.css" />
 
         <!-- Custom Fonts -->
         <link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -21,17 +22,25 @@
         <script type="text/javascript" src="/release/angular.js"></script>
         <!-- <script type="text/javascript" src='/release/angular-ui-router.min.js'></script> -->
         <script src="/release/angular-route.js"></script>
+        <script src="/release/trNgGrid.min.js"></script>
 
         <script type="text/javascript" src="app.js"></script>
-        <script type="text/javascript" src="/controllers/AdminUserCtrl.js"></script>
-        <script type="text/javascript" src="/controllers/SidebarController.js"></script>
+
+        <!-- Services -->
         <script type="text/javascript" src="/service/AppServices.js"></script>
+        <script type="text/javascript" src="/service/admin/RoleService.js"></script>
+
+
+        <!-- Controllers -->
+        <script type="text/javascript" src="/controllers/AuthenticationController.js"></script>
+        <script type="text/javascript" src="/controllers/SidebarController.js"></script>
+        <script type="text/javascript" src="/controllers/admin/RoleController.js"></script>
 
     </head>
 
     <body>
 
-        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -46,33 +55,23 @@
             </div>
         </nav>
 
-
-        <div class="container-fluid">
+        <!-- This is the sidebar menu, it will be updated to be driven by a controller
+             but for now it is a manual list            
+        -->
+        <div class="container" style="padding-top:5px; border-top-right-radius: 6px;">
             <div class="row">
                 <div class="col-sm-3 col-md-2 sidebar"ng-controller="SidebarController" ng-show="isAuthenticated()">
                     <ul class="nav nav-sidebar">
-                        <li class="active"><a href="#">Overview</a></li>
-                        <li><a href="#">Reports</a></li>
-                        <li><a href="#">Analytics</a></li>
-                        <li><a href="#">Export</a></li>
-                    </ul>
-                    <ul class="nav nav-sidebar">
-                        <li><a href="">Nav item</a></li>
-                        <li><a href="">Nav item again</a></li>
-                        <li><a href="">One more nav</a></li>
-                        <li><a href="">Another nav item</a></li>
-                        <li><a href="">More navigation</a></li>
-                    </ul>
-                    <ul class="nav nav-sidebar">
-                        <li><a href="">Nav item again</a></li>
-                        <li><a href="">One more nav</a></li>
-                        <li><a href="">Another nav item</a></li>
+                        <li class="active"><a href="#/home"><i class="fa fa-home fa-fw"></i>  Home</a></li>
+                        <li class=""><a href="#/admin/roles"><i class="fa fa-users fa-fw"></i> Role Management</a></li>
+                        <li class=""><a href="#/admin/companies"><i class="fa fa-university fa-fw"></i> Company Management</a></li>
+                        <li class=""><a href="#/admin/users"><i class="fa fa-user fa-fw"></i> User Management</a></li>
                     </ul>
                 </div>
             </div>
 
+            <div ng-view></div>
 
-            <div ng-view style="padding-left: 375px;"></div>
 
         </body>
     </html>
