--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
         <link rel="icon" href="../../favicon.ico">
 
         <title>N-Abler Internal Dashboard </title>
-        <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/>
+        <!-- <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/> -->
+        <link rel="stylesheet" type="text/css" href="/css/slate.css"/>
         <link rel="stylesheet" type="text/css" href="/css/style.css" />
         <link rel="stylesheet" type="text/css" href="/css/nabler.css" />
         <link rel="stylesheet" type="text/css" href="/css/trNgGrid.min.css" />
@@ -35,9 +36,7 @@
         <script type="text/javascript" src="/controllers/AuthenticationController.js"></script>
         <script type="text/javascript" src="/controllers/SidebarController.js"></script>
         <script type="text/javascript" src="/controllers/admin/RoleController.js"></script>
-
     </head>
-
     <body>
 
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -56,17 +55,19 @@
         </nav>
 
         <!-- This is the sidebar menu, it will be updated to be driven by a controller
-             but for now it is a manual list            
+        but for now it is a manual list
         -->
-        <div class="container" style="padding-top:5px; border-top-right-radius: 6px;">
-            <div class="row">
-                <div class="col-sm-3 col-md-2 sidebar"ng-controller="SidebarController" ng-show="isAuthenticated()">
-                    <ul class="nav nav-sidebar">
-                        <li class="active"><a href="#/home"><i class="fa fa-home fa-fw"></i>  Home</a></li>
-                        <li class=""><a href="#/admin/roles"><i class="fa fa-users fa-fw"></i> Role Management</a></li>
-                        <li class=""><a href="#/admin/companies"><i class="fa fa-university fa-fw"></i> Company Management</a></li>
-                        <li class=""><a href="#/admin/users"><i class="fa fa-user fa-fw"></i> User Management</a></li>
-                    </ul>
+        <div class="container" style="border-top-right-radius: 6px;">
+            <div class="panel">
+                <div class="row">
+                    <div class="col-sm-3 col-md-2 sidebar" ng-controller="SidebarController" ng-show="isAuthenticated()">
+                        <ul class="nav nav-sidebar list-group">
+                            <li class="active list-group-item"><a href="#/home"><i class="fa fa-home fa-fw"></i>  Home</a></li>
+                            <li class="list-group-item"><a href="#/admin/roles"><i class="fa fa-users fa-fw"></i> Role Admin</a></li>
+                            <li class="list-group-item"><a href="#/admin/companies"><i class="fa fa-university fa-fw"></i> Company Admin</a></li>
+                            <li class="list-group-item"><a href="#/admin/users"><i class="fa fa-user fa-fw"></i> User Admin</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
 
