--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,10 @@
         <link rel="icon" href="../../favicon.ico">
 
         <title>N-Abler Internal Dashboard </title>
+        <link rel="stylesheet" type="text/css" href="/css/normalize.css"/>
         <!-- <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/> -->
-        <link rel="stylesheet" type="text/css" href="/css/slate.css"/>
+        <!-- <link rel="stylesheet" type="text/css" href="/css/slate.css"/> -->
+        <link rel="stylesheet" type="text/css" href="/css/cerulean.css"/>
         <link rel="stylesheet" type="text/css" href="/css/style.css" />
         <link rel="stylesheet" type="text/css" href="/css/nabler.css" />
         <link rel="stylesheet" type="text/css" href="/css/trNgGrid.min.css" />
@@ -19,9 +21,10 @@
         <link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 
-        <script type="text/javascript" src="/release/jquery.min.js"></script>
+        <!-- <script type="text/javascript" src="/release/jquery.min.js"></script> -->
         <script type="text/javascript" src="/release/angular.js"></script>
         <!-- <script type="text/javascript" src='/release/angular-ui-router.min.js'></script> -->
+        <script type="text/javascript" src='/release/ui-bootstrap-tpls-0.11.2.js'></script>
         <script src="/release/angular-route.js"></script>
         <script src="/release/trNgGrid.min.js"></script>
 
@@ -35,10 +38,10 @@
         <!-- Controllers -->
         <script type="text/javascript" src="/controllers/AuthenticationController.js"></script>
         <script type="text/javascript" src="/controllers/SidebarController.js"></script>
+        <script type="text/javascript" src="/controllers/OnDeckController.js"></script>
         <script type="text/javascript" src="/controllers/admin/RoleController.js"></script>
     </head>
     <body>
-
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -53,7 +56,6 @@
                 </div>
             </div>
         </nav>
-
         <!-- This is the sidebar menu, it will be updated to be driven by a controller
         but for now it is a manual list
         -->
@@ -64,8 +66,12 @@
                         <ul class="nav nav-sidebar list-group">
                             <li class="active list-group-item"><a href="#/home"><i class="fa fa-home fa-fw"></i>  Home</a></li>
                             <li class="list-group-item"><a href="#/admin/roles"><i class="fa fa-users fa-fw"></i> Role Admin</a></li>
+                            <li class="list-group-item"><a href="#/application/ondeck"><i class="fa fa-users fa-fw"></i> On-Deck</a></li>
                             <li class="list-group-item"><a href="#/admin/companies"><i class="fa fa-university fa-fw"></i> Company Admin</a></li>
                             <li class="list-group-item"><a href="#/admin/users"><i class="fa fa-user fa-fw"></i> User Admin</a></li>
+
+
+                            <li class="list-group-item"><a href="#/test/test"><i class="fa fa-user fa-fw"></i> Test Page</a></li>
                         </ul>
                     </div>
                 </div>
