--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
         <script type="text/javascript" src='/release/ui-bootstrap-tpls-0.11.2.js'></script>
         <script src="/release/angular-route.js"></script>
         <script src="/release/trNgGrid.min.js"></script>
+        <script src="/release/ui-bootstrap.js"></script>
 
         <script type="text/javascript" src="app.js"></script>
 
