--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         <script type="text/javascript" src='/release/ui-bootstrap-tpls-0.11.2.js'></script>
         <script src="/release/angular-route.js"></script>
         <script src="/release/trNgGrid.min.js"></script>
-        <script src="/release/ui-bootstrap.js"></script>
+        <!-- <script src="/release/ui-bootstrap.js"></script> -->
 
         <script type="text/javascript" src="app.js"></script>
 
@@ -71,7 +71,6 @@
                             <li class="list-group-item"><a href="#/admin/companies"><i class="fa fa-university fa-fw"></i> Company Admin</a></li>
                             <li class="list-group-item"><a href="#/admin/users"><i class="fa fa-user fa-fw"></i> User Admin</a></li>
 
-
                             <li class="list-group-item"><a href="#/test/test"><i class="fa fa-user fa-fw"></i> Test Page</a></li>
                         </ul>
                     </div>
@@ -79,7 +78,7 @@
             </div>
 
             <div ng-view></div>
+        </div>
 
-
-        </body>
-    </html>
+    </body>
+</html>
