added the themese
asdf

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,22 @@
         <title>N-Abler Internal Dashboard </title>
         <link rel="stylesheet" type="text/css" href="/css/normalize.css"/>
         <!-- <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/> -->
-        <!-- <link rel="stylesheet" type="text/css" href="/css/slate.css"/> -->
-        <link rel="stylesheet" type="text/css" href="/css/cerulean.css"/>
+        <link rel="stylesheet" type="text/css" href="/css/slate.css"/>
+        <!-- <link rel="stylesheet" type="text/css" href="/css/cerulean.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/cosmo.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/cyborg.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/darkly.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/flatly.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/journal.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/lumen.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/paper.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/readable.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/sandstone.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/simplex.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/spacelab.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/superhero.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/united.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/yeti.css"/> -->
         <link rel="stylesheet" type="text/css" href="/css/style.css" />
         <link rel="stylesheet" type="text/css" href="/css/nabler.css" />
         <link rel="stylesheet" type="text/css" href="/css/trNgGrid.min.css" />
