--- a/public/index.html
+++ b/public/index.html
@@ -9,25 +9,27 @@
         <link rel="icon" href="../../favicon.ico">
 
         <title>N-Abler Internal Dashboard </title>
-        <link rel="stylesheet" type="text/css" href="/css/normalize.css"/>
-        <!-- <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css"/> -->
-        <link rel="stylesheet" type="text/css" href="/css/slate.css"/>
-        <!-- <link rel="stylesheet" type="text/css" href="/css/cerulean.css"/> -->
-        <!-- <link rel="stylesheet" type="text/css" href="/css/cosmo.css"/> -->
-        <!-- <link rel="stylesheet" type="text/css" href="/css/cyborg.css"/> -->
-        <!-- <link rel="stylesheet" type="text/css" href="/css/darkly.css"/> -->
-        <!-- <link rel="stylesheet" type="text/css" href="/css/flatly.css"/> -->
-        <!-- <link rel="stylesheet" type="text/css" href="/css/journal.css"/> -->
-        <!-- <link rel="stylesheet" type="text/css" href="/css/lumen.css"/> -->
-        <!-- <link rel="stylesheet" type="text/css" href="/css/paper.css"/> -->
-        <!-- <link rel="stylesheet" type="text/css" href="/css/readable.css"/> -->
-        <!-- <link rel="stylesheet" type="text/css" href="/css/sandstone.css"/> -->
-        <!-- <link rel="stylesheet" type="text/css" href="/css/simplex.css"/> -->
-        <!-- <link rel="stylesheet" type="text/css" href="/css/spacelab.css"/> -->
-        <!-- <link rel="stylesheet" type="text/css" href="/css/superhero.css"/> -->
-        <!-- <link rel="stylesheet" type="text/css" href="/css/united.css"/> -->
-        <!-- <link rel="stylesheet" type="text/css" href="/css/yeti.css"/> -->
+        <link rel="stylesheet" type="text/css" href="/css/themes/normalize.css"/>
+        <!-- <link rel="stylesheet" type="text/css" href="/css/themes/bootstrap.min.css"/> -->
+        <link rel="stylesheet" type="text/css" href="/css/themes/slate.css"/>
+        <!-- <link rel="stylesheet" type="text/css" href="/css/themes/cerulean.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/themes/cosmo.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/themes/cyborg.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/themes/darkly.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/themes/flatly.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/themes/journal.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/themes/lumen.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/themes/paper.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/themes/readable.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/themes/sandstone.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/themes/simplex.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/themes/spacelab.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/themes/superhero.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/themes/united.css"/> -->
+        <!-- <link rel="stylesheet" type="text/css" href="/css/themes/yeti.css"/> -->
+        
         <link rel="stylesheet" type="text/css" href="/css/style.css" />
+        <link rel="stylesheet" type="text/css" href="/css/sidebar.css" />
         <link rel="stylesheet" type="text/css" href="/css/nabler.css" />
         <link rel="stylesheet" type="text/css" href="/css/trNgGrid.min.css" />
 
